--- a/api-seed/package.json
+++ b/api-seed/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/thanhson1085/api-seed#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "config": "^1.19.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.11",
