--- a/api-seed/package.json
+++ b/api-seed/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "config": "^1.19.0",
+    "crypto": "0.0.3",
     "express": "^4.13.4",
     "mongoose": "^4.4.11",
     "winston": "^2.2.0"
