--- a/api-seed/package.json
+++ b/api-seed/package.json
@@ -25,7 +25,9 @@
     "config": "^1.19.0",
     "crypto": "0.0.3",
     "express": "^4.13.4",
+    "js-yaml": "^3.5.5",
     "mongoose": "^4.4.11",
+    "swagger-editor": "^2.9.9",
     "winston": "^2.2.0"
   }
 }
