--- a/api-seed/package.json
+++ b/api-seed/package.json
@@ -28,6 +28,7 @@
     "js-yaml": "^3.5.5",
     "moment": "^2.12.0",
     "mongoose": "^4.4.11",
+    "mongoose-timestamp": "^0.5.0",
     "swagger-editor": "^2.9.9",
     "winston": "^2.2.0"
   }
