--- a/api-seed/package.json
+++ b/api-seed/package.json
@@ -26,6 +26,7 @@
     "crypto": "0.0.3",
     "express": "^4.13.4",
     "js-yaml": "^3.5.5",
+    "lodash": "^4.11.0",
     "moment": "^2.12.0",
     "mongoose": "^4.4.11",
     "mongoose-timestamp": "^0.5.0",
