--- a/api-seed/package.json
+++ b/api-seed/package.json
@@ -27,6 +27,7 @@
     "express": "^4.13.4",
     "js-yaml": "^3.5.5",
     "lodash": "^4.11.0",
+    "mocha": "^2.4.5",
     "moment": "^2.12.0",
     "mongoose": "^4.4.11",
     "mongoose-timestamp": "^0.5.0",
