--- a/api-seed/package.json
+++ b/api-seed/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.12.0",
     "mongoose": "^4.4.11",
     "mongoose-timestamp": "^0.5.0",
+    "redis": "^2.6.0-2",
     "supertest": "^1.2.0",
     "swagger-editor": "^2.9.9",
     "winston": "^2.2.0"
