--- a/api-seed/package.json
+++ b/api-seed/package.json
@@ -25,13 +25,18 @@
     "chai": "^3.5.0",
     "config": "^1.19.0",
     "crypto": "0.0.3",
+    "ejs": "^2.4.1",
+    "email-templates": "^2.3.0",
     "express": "^4.13.4",
     "js-yaml": "^3.5.5",
+    "kue": "^0.10.5",
     "lodash": "^4.11.0",
     "mocha": "^2.4.5",
     "moment": "^2.12.0",
     "mongoose": "^4.4.11",
     "mongoose-timestamp": "^0.5.0",
+    "nodemailer": "^2.3.2",
+    "nodemailer-smtp-transport": "^2.4.2",
     "redis": "^2.6.0-2",
     "supertest": "^1.2.0",
     "swagger-editor": "^2.9.9",
