--- a/site-seed/bower.json
+++ b/site-seed/bower.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "angular": "^1.4.0",
     "bootstrap-sass-official": "^3.2.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-ui-router": "^0.2.18",
+    "oclazyload": "^1.0.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
