--- a/site-seed/bower.json
+++ b/site-seed/bower.json
@@ -6,7 +6,8 @@
     "bootstrap-sass-official": "^3.2.0",
     "angular-touch": "^1.4.0",
     "angular-ui-router": "^0.2.18",
-    "oclazyload": "^1.0.9"
+    "oclazyload": "^1.0.9",
+    "font-awesome": "fontawesome#^4.6.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
