--- a/site-seed/bower.json
+++ b/site-seed/bower.json
@@ -7,7 +7,9 @@
     "angular-touch": "^1.4.0",
     "angular-ui-router": "^0.2.18",
     "oclazyload": "^1.0.9",
-    "font-awesome": "fontawesome#^4.6.3"
+    "font-awesome": "fontawesome#^4.6.3",
+    "angular-resource": "^1.5.7",
+    "angular-cookies": "^1.5.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
