--- a/site-seed/bower.json
+++ b/site-seed/bower.json
@@ -15,7 +15,8 @@
     "angular-translate": "^2.11.0",
     "angular-translate-storage-local": "^2.11.0",
     "angular-translate-loader-static-files": "^2.11.0",
-    "angular-loading-bar": "^0.9.0"
+    "angular-loading-bar": "^0.9.0",
+    "jquery": "2.2.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
