swarm for nodetwo

--- a/ops/data/one/swarm-manager.conf
+++ b/ops/data/one/swarm-manager.conf
@@ -2,7 +2,7 @@ description "Swarm Manager"
  
 start on runlevel [2345]
 stop on runlevel [!2345]
-start on filesystem and started docker
+start on filesystem and started docker and started consul
 
 setuid root
 setgid root
