--- a/ops/data/one/consul-template.conf
+++ b/ops/data/one/consul-template.conf
@@ -2,7 +2,7 @@ description "Consul Template Jobs"
 
 start on runlevel [2345]
 stop on runlevel [!2345]
-start on filesystem and started consul-server
+start on filesystem and started consul
 
 setuid root
 setgid root
