bug connect consul

--- a/ops/data/one/registrator.conf
+++ b/ops/data/one/registrator.conf
@@ -24,7 +24,7 @@ pre-start script
         --name=registrator \
         --volume=/var/run/docker.sock:/tmp/docker.sock \
         gliderlabs/registrator:latest \
-        consul://localhost:8500
+        consul://172.20.20.20:8500
 end script
 
 # run when container is running
