--- a/ops/data/one/swarm-manager.conf
+++ b/ops/data/one/swarm-manager.conf
@@ -21,7 +21,7 @@ pre-start script
         docker rm swarm_manager
     fi
     docker run -d -p 12375:2375 --name swarm_manager \
-        swarm manage consul://localhost:8500/bean-seed
+        swarm manage consul://172.20.20.20:8500/bean-seed
 end script
 
 # run when container is running
