--- a/ops/data/two/swarm.conf
+++ b/ops/data/two/swarm.conf
@@ -22,7 +22,7 @@ pre-start script
     fi
     docker run -d --name swarm_joiner swarm join \
         --addr=172.20.20.21:2375 \
-        consul://localhost:8500/bean-seed
+        consul://172.20.20.21:8500/bean-seed
 end script
 
 # run when container is running
