--- a/ops/data/two/registrator.conf
+++ b/ops/data/two/registrator.conf
@@ -23,7 +23,7 @@ pre-start script
         --name=registrator \
         --volume=/var/run/docker.sock:/tmp/docker.sock \
         gliderlabs/registrator:latest \
-        consul://localhost:8500
+        consul://172.20.20.21:8500
 end script
 
 # run when container is running
