--- a/app.template
+++ b/app.template
@@ -2,6 +2,10 @@ upstream backend {
     server apis:3000;
 }
 
+upstream frontend {
+    server site;
+}
+
 server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
@@ -12,8 +16,7 @@ server {
     }
 
     location / {
-        index index.html;
-        root /site/;
+        proxy_pass http://frontend/;
     }
 
 }
