make registrator consul-template works :ghost:

--- a/ops/data/two/docker.conf
+++ b/ops/data/two/docker.conf
@@ -1,1 +1,1 @@
-DOCKER_OPTS="-H tcp://0.0.0.0:2375 -H unix:///var/run/docker.sock"
+DOCKER_OPTS="-H tcp://0.0.0.0:2375 -H unix:///var/run/docker.sock --cluster-store=consul://172.20.20.21:8500 --cluster-advertise=172.20.20.21:2375"
