--- a/ops/data/two/registrator.conf
+++ b/ops/data/two/registrator.conf
@@ -19,10 +19,10 @@ pre-start script
     then
         docker rm registrator
     fi
-    docker run -d -h 172.20.20.21 \
+    docker run -d -h 172.20.20.21 --net=build_back-net --net=build_front-net\
         --name=registrator \
         --volume=/var/run/docker.sock:/tmp/docker.sock \
-        gliderlabs/registrator:latest \
+        gliderlabs/registrator:latest -internal \
         consul://172.20.20.21:8500
 end script
 
