--- a/ops/data/one/consul-template.conf
+++ b/ops/data/one/consul-template.conf
@@ -2,12 +2,13 @@ description "Consul Template Jobs"
 
 start on runlevel [2345]
 stop on runlevel [!2345]
-start on filesystem and started consul
+start on filesystem and started consul-server
 
 setuid root
 setgid root
+env DOCKER_HOST="tcp://172.20.20.20:12375"
 
 exec consul-template \
     -consul 127.0.0.1:8500 \
-    -template "/build/gateway/consul-template/nginx.ctmpl:/etc/nginx/sites-available/default:service nginx reload" \
-    -retry 30s 
+    -template "/build/ops/data/gateway.ctmpl:/build/app.template:docker exec -it gateway /etc/init.d/nginx reload" \
+    -retry 30s
