--- a/ops/data/one/registrator.conf
+++ b/ops/data/one/registrator.conf
@@ -20,11 +20,11 @@ pre-start script
     then
         docker rm registrator
     fi
-    docker run -d -h 172.20.20.20 \
+    docker run -d -h 172.20.20.21 --net=build_back-net --net=build_front-net\
         --name=registrator \
         --volume=/var/run/docker.sock:/tmp/docker.sock \
-        gliderlabs/registrator:latest \
-        consul://172.20.20.20:8500
+        gliderlabs/registrator:latest -internal \
+        consul://172.20.20.21:8500
 end script
 
 # run when container is running
