add respawn :family:

--- a/ops/data/one/consul.conf
+++ b/ops/data/one/consul.conf
@@ -3,6 +3,9 @@ description "Consul Server"
 start on (local-filesystems and net-device-up IFACE!=lo)
 start on runlevel [2345]
 stop on runlevel [!2345]
+
+respawn
+respawn limit 10 20
  
 setuid root
 setgid root
