--- a/ops/data/two/consul-template.conf
+++ b/ops/data/two/consul-template.conf
@@ -2,7 +2,10 @@ description "Consul Template Jobs"
 
 start on runlevel [2345]
 stop on runlevel [!2345]
-start on filesystem and started consul-server
+start on filesystem and started consul
+
+respawn
+respawn limit 10 20
 
 setuid root
 setgid root
