--- a/ops/data/one/consul-template.conf
+++ b/ops/data/one/consul-template.conf
@@ -4,6 +4,9 @@ start on runlevel [2345]
 stop on runlevel [!2345]
 start on filesystem and started consul-server
 
+respawn
+respawn limit 10 20
+
 setuid root
 setgid root
 
