--- a/ops/data/two/swarm.conf
+++ b/ops/data/two/swarm.conf
@@ -7,7 +7,8 @@ start on filesystem and started docker and started consul
 setuid root
 setgid root
 
-respawn limit 3 240
+respawn
+respawn limit 10 20
 
 # start the container in the pre-start script
 pre-start script  
