--- a/ops/data/two/registrator.conf
+++ b/ops/data/two/registrator.conf
@@ -20,7 +20,7 @@ pre-start script
     then
         docker rm registrator
     fi
-    docker run -d -h 172.20.20.21 --net=build_back-net --net=build_front-net\
+    docker run -d --net=build_back-net --net=build_front-net\
         --volume=/var/run/docker.sock:/tmp/docker.sock \
         gliderlabs/registrator:latest -internal \
         consul://172.20.20.21:8500
