remove -it :kiss:

--- a/ops/data/one/consul-template.conf
+++ b/ops/data/one/consul-template.conf
@@ -12,5 +12,5 @@ setgid root
 
 exec consul-template \
     -consul 127.0.0.1:8500 \
-    -template "/build/ops/data/gateway.ctmpl:/build/app.template:docker exec -it gateway /etc/init.d/nginx reload" \
+    -template "/build/ops/data/gateway.ctmpl:/build/app.template:docker exec gateway /etc/init.d/nginx reload" \
     -retry 30s
