--- a/monitor/fluentd/fluent.conf
+++ b/monitor/fluentd/fluent.conf
@@ -1,21 +1,18 @@
 <source>
-  type tail
-  read_from_head true
-  path /var/lib/docker/containers/*/*-json.log
-  pos_file /var/log/fluentd-docker.pos
-  time_format %Y-%m-%dT%H:%M:%S
-  tag docker.*
-  format json
+  type forward
+  port 24224
+  bind 0.0.0.0
 </source>
-# Using filter to add container IDs to each event
-<filter docker.var.lib.docker.containers.*.*.log>
-  type record_transformer
-  <record>
-    container_id ${tag_parts[5]}
-  </record>
+
+<filter docker.gateway>
+  @type parser
+  key_name log
+  time_format %d/%b/%Y:%H:%M:%S %z
+  format /^\[(?<time>([^ ]* [^\]]*))\] (?<remote>[^ ]*) - ([^ ]*) - ([^ ]*) to: (?<host>[^ ]*) (?<method>[^ ]*) (?<path>[^ ]*) ([^ ]*) (?<code>[^ ]*) upstream_response_time (?<response_time>[^ ]*) msec ([^ ]*) request_time ([^ ]*)/
+  reserve_data true
 </filter>
 
-<match docker.var.lib.docker.containers.*.*.log>
+<match docker.*>
   type elasticsearch
   logstash_format true
   host "#{ENV['ES_PORT_9200_TCP_ADDR']}" # dynamically configured to use Docker's link feature
